--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
     </aside>
 
-    <aside id="productDetail" class=>
+    <aside id="productDetail" class="inactive">
         <div class="aside-close">
             <img src="./icons/icon_close.png" alt="close">
         </div>
